added transactions -added exception for when no customer is found -no major changes to existing code, just reformatted the code